sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: missing parameter type
	while ((ecart=>1)&&b) {
                ^